<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cinetpay_baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:minWidth="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cinetpay_txt_amound_to_pay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end|center"
                        android:maxLines="2"
                        android:textColor="#666"
                        android:textSize="25sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/cinetpay_edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cinetpay_phone_hint"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="#3dac62"
                    android:textSize="14sp">

                    <requestFocus />

                </EditText>

                <EditText
                    android:id="@+id/cinetpay_edt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/cinetpay_otp_code_hint"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:textColor="#3dac62"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/cinetpay_txt_explicit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/cinetpay_cinetpay"
                android:textColor="#3dac62"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp" />

        </FrameLayout>

        <ImageView
            android:id="@+id/cinetpay_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/cinetpay_cancel" />

    </FrameLayout>

    <View
        android:id="@+id/cinetpay_vw_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCC"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/cinetpay_imageView1"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:src="@drawable/cinetpay_icon2" 
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <View
            android:id="@+id/cinetpay_view1"
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/cinetpay_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center"
            android:enabled="false"
            android:text="@string/cinetpay_pay" />

    </LinearLayout>

</LinearLayout>